# rust-gtk_chessboard

./: README.md
rust-gtk_chessboard/: Cargo.toml
rust-gtk_chessboard/README_Ajedrez/: README.odt
rust-gtk_chessboard/partidas_pgn/: unaPartida.pgn
rust-gtk_chessboard/src/: main.rs
rust-gtk_chessboard/src/ui/: dialogos.rs  inicia_gui.rs  mod.rs  utils.rs
rust-gtk_chessboard/src/ui/ajedrez/: defs.rs  mod.rs
