[package]
name = "tablero"
version = "0.1.0"
authors = ["calvicius"]
edition = "2018"

[dependencies]
regex = "1.0.6"
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"
lazy_static = "1.3.0"
mut_static = "5.0.0"

gtk = "0.6.0"
cairo-rs = "0.6.0"
gdk = "0.10.0"
gio = "0.6.0"
pango = "0.6.0"
rsvg = { git = "https://github.com/1aim/rsvg-rs.git", rev = "0a24ef8c7b8472b116fbcd44654eb896f279b608" }
